--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -99,9 +99,11 @@
         </div>
         <p><a href="~/vasc/c_error/index" class="btn btn-danger btn-sm">c_error &raquo;</a></p>
 
-        <hr />
-        <h3>TODO</h3>
-        <p><a href="~/vasc/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a>Manage c_job</p>
+        <div class="alert alert-info">
+            <strong>Add/Edit/Remove what jobs should be logged in rt_job</strong>
+        </div>
+        <p><a href="~/vasc/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a></p>
+
     </div>
 </div>
 
