--- a/EqUiWebUi/Views/c_housekeeping/_List.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/_List.cshtml
@@ -4,11 +4,10 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.c_schedule.name).Titled("scheduleName");
     columns.Add(c => c.Name).Titled("Name");
-    columns.Add(c => "<p id=" + c.id + " class='editTestCollum1'>" + c.Name).Encoded(false).Titled("NameEdit1");
-    columns.Add(c => "<p id=" + c.id + " class='editTestCollum2'>" + c.Name).Encoded(false).Titled("NameEdit2");
     columns.Add(c => c.SchemaName).Titled("SchemaName");
     columns.Add(c => c.TableName).Titled("TableName");
     columns.Add(c => c.nDaysKeepHistory).Titled("KeepDays");
+    columns.Add(c => c.NoHousekeeping).Titled("NoHousekeeping");
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
