--- a/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
@@ -14,3 +14,7 @@
         <p>@MyHtmlHelpers.IconActionLink("/Alert/c_triggers/index", "fas fa-bell", "List all alert jobs", "alert triggers")</p>
     </div>
 </div>
+
+<script>
+    EnableInterfaceEvents();
+</script>
