--- a/EqUiWebUi/Views/Assets/Index.cshtml
+++ b/EqUiWebUi/Views/Assets/Index.cshtml
@@ -7,24 +7,24 @@
 @Html.Grid(Model).Named("ASSETSGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c.LOCATION).Titled("LOCATION");
-    columns.Add(c => c.ASSETNUM).Titled("ASSETNUM");
+    columns.Add(c => c.LOCATION).Titled("LOCATION").Css("tablesaw-priority-persist");
+    columns.Add(c => c.ASSETNUM).Titled("ASSETNUM").Css("tablesaw-priority-0");
     columns.Add(c => c.AssetDescription).Titled("AssetDescription");
     columns.Add(c => c.LocationTree).Titled("LocationTree");
-    columns.Add(c => c.Area).Titled("Area");
-    columns.Add(c => c.Station).Titled("Station");
-    columns.Add(c => c.Team).Titled("Team");
-    columns.Add(c => c.controller_name).Titled("controller_name");
-    columns.Add(c => c.controller_type).Titled("controller_type");
-    columns.Add(c => c.controller_id).Titled("controller_id");
-    columns.Add(c => c.ResponsibleProductionTeam).Titled("ResponsibleProductionTeam");
-    columns.Add(c => c.ResponsibleTechnicianTeam).Titled("ResponsibleTechnicianTeam");
+    columns.Add(c => c.Area).Titled("Area").Css("tablesaw-priority-6");
+    columns.Add(c => c.Station).Titled("Station").Css("tablesaw-priority-6");
+    columns.Add(c => c.Team).Titled("Team").Css("tablesaw-priority-0");
+    columns.Add(c => c.controller_name).Titled("controller_name").Css("tablesaw-priority-0");
+    columns.Add(c => c.controller_type).Titled("controller_type").Css("tablesaw-priority-0");
+    columns.Add(c => c.controller_id).Titled("controller_id").Css("tablesaw-priority-0");
+    columns.Add(c => c.ResponsibleProductionTeam).Titled("ResponsibleProductionTeam").Css("tablesaw-priority-0");
+    columns.Add(c => c.ResponsibleTechnicianTeam).Titled("ResponsibleTechnicianTeam").Css("tablesaw-priority-0");
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
-}).Empty("Did not find anything").Css("table-hover")
+}).Empty("Did not find anything").Css("table-hover tablesaw-on")
 
 @section scripts{
     <script>
