addes assetnum to maximo

--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
@@ -6,6 +6,7 @@
     columns.Add(c => c.OWNERGROUP).Titled("GROUP").Css("tablesaw-priority-0");
     columns.Add(c => c.WORKTYPE).Titled("TYPE").Css("tablesaw-priority-6");
     columns.Add(c => c.LOCATION).Titled("LOCATION");
+    columns.Add(c => c.ASSETNUM).Titled("ASSETNUM").Css("tablesaw-priority-0"); //important for VCCH style 
     columns.Add(c => c.STATUS).Titled("STATUS");
     columns.Add(c => c.STATUSDATE).Titled("STATUSDATE").Css("tablesaw-priority-6");
     columns.Add(c => c.DESCRIPTION).Titled("DESCRIPTION");
