--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -8,6 +8,7 @@
     columns.Add(c => c.systemId).Titled("systemId").Css("tablesaw-priority-6");
     columns.Add(c => c.ip).Titled("ip").Css("tablesaw-priority-6");
     columns.Add(c => c._ControllerFlags).Titled("flags");
+    columns.Add(c => c.LocationTree).Titled("LocationTree").Css("tablesaw-priority-0");
     columns.Add(c => c)
                     .Titled("Tools")
                     .Encoded(false)
