--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -96,7 +96,7 @@
     </div>
     <div class="row">
         <div class="col-6">
-            @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net", "fas fa-flag", "VCCH (production)", helperText: "Volvo cars Charleston")
+            @MyHtmlHelpers.EquiLink("https://chasvw1203.cha.volvocars.net", "fas fa-flag", "VCCH (production)", helperText: "Volvo cars Charleston")
         </div>
         <div class="col-6">
             @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net:666", "fas fa-flag", "VCCH (development)", helperText: "Volvo cars Charleston")
