--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
         {
             @MyHtmlHelpers.EquiLink("/Tableau/index", "fas fa-chart-line", "Tableau", helperText: "Dashboards done right")
         }
-        @MyHtmlHelpers.EquiLink("/Tiplife/Electrode/CurrentTipstatus", "fas fa-industry", "Electrode", helperText: "Alles in verband met de Electrodes (greenfield)")
+        @MyHtmlHelpers.EquiLink("/Tiplife/Electrode/CurrentTipstatus", "fas fa-industry", "Electrode", helperText: "Everything about electrodes")
     </div>
 </div>
 
