--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -37,22 +37,28 @@
                         <li class="dropdown-item">
                             @MyHtmlHelpers.EquiLink(@Url.Action("WeldgunTool", "Electrode", new { area = "Tiplife" }, null), "fas fa-toolbox", "WeldgunTool", helperText: "View data and control charts")
                         </li>
+
+                        <li class="dropdown-item">
+                            <div class="badge badge-info">
+                                <h6>The tools use Microsoft Click once deployment!</h6>
+                            </div>
+                            <p>@MyHtmlHelpers.EquiLink("https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb", "fab fa-chrome", "ClickOnce for Google Chrome", helperText: "Needed to launch click once tools in the chrome browser.")
+                        </li>
+                        <li class="dropdown-divider"></li>
                         @if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCG")
                         {
-                            <li class="dropdown-item">
-                                <div class="badge badge-info">
-                                    <h6>The tools use Microsoft Click once deployment!</h6>
-                                </div>
-                                <p>@MyHtmlHelpers.EquiLink("https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb", "fab fa-chrome", "ClickOnce for Google Chrome", helperText: "Needed to launch click once tools in the chrome browser.")
-                            </li>
-                            <li class="dropdown-divider"></li>
-
                             <li class="dropdown-item">
                                 @MyHtmlHelpers.EquiLink("http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application", "fas fa-desktop", "DigiboardLauncher", helperText: "Startup tool for kiosks", helpurl: @Url.Action("_Getwiki", "Wiki", new { area = "", id = "DigibordLauncher" }, null))
                             </li>
 
                             <li class="dropdown-item">
                                 @MyHtmlHelpers.EquiLink("file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/VSTO/DEPLOYMENTBASE/ExcelAddInEquipmentDatabase.vsto", "fas fa-file-excel", "VSTO Excel (install)", helperText: "Excel ribbon plugin to acces the database (installation file)", helpurl: @Url.Action("_Getwiki", "Wiki", new { area = "", id = "VSTO" }, null))
+                            </li>
+                        }
+                        @if (System.Configuration.ConfigurationManager.AppSettings["Maximo_SiteID"].ToString() == "VCCH")
+                        {
+                            <li class="dropdown-item">
+                                @MyHtmlHelpers.EquiLink("file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/VSTO/DEPLOYMENTBASE_VCCH/ExcelAddInEquipmentDatabase.vsto", "fas fa-file-excel", "VSTO Excel (install)", helperText: "Excel ribbon plugin to acces the database (installation file)", helpurl: @Url.Action("_Getwiki", "Wiki", new { area = "", id = "VSTO" }, null))
                             </li>
                         }
                     </ul>
